--- a/css/creative.css
+++ b/css/creative.css
@@ -314,7 +314,7 @@ header.masthead p {
 --------------------------------*/
 #call-to-action {
   background-image: url("../img/header2.jpg");
-  background-size: 100%;
+  background-size: cover;
   padding: 80px 0;
 }
 
