--- a/css/creative.css
+++ b/css/creative.css
@@ -406,7 +406,7 @@ header.masthead p {
 --------------------------------*/
 #call-to-action33 {
   background-image: url("../img/header3.jpg");
-  background-size: cover;
+  background-size: 100%;
   padding: 80px 0;
 }
 
