--- a/css/creative.css
+++ b/css/creative.css
@@ -494,7 +494,7 @@ header.masthead p {
 --------------------------------*/
 
 #section1 {
-  background: #a71737;
+  background: #fff;
   padding: 80px 0;
 }
 
