--- a/css/theme.css
+++ b/css/theme.css
@@ -826,7 +826,7 @@ body.btn-rounded .btn {
 .bg-light .btn-filled:visited {
   color: #fff;
 }
-/*!---------- 1. CORES DAS LETRAS DENTRO DOS BOTÕES ----------*/
+/*!---------- 1. CORES DAS LETRAS DENTRO DOS BOTÕES ---------*/
 .btn:visited {
   color:black;
 }
